# P2PIO

./: .gitignore  .gitmodules  Cargo.toml  README.md  bot.js  client.js  config.json  game-client.js  game-server.js  package.json  paper-io-bot.js  server.js  webpack.config.js
client-modes/: bot-mode.js  paper-io-bot-mode.js  rolling.js  user-mode.js
contract/: Cargo.toml  README.md
contract/src/: heading.rs  index.rs  lib.rs  player.rs
game-core/: color.js  index.js  player.js
public/: bundle.js  index.html
public/css/: styles.css
public/js/: bundle.js
public/static/: styles.css
src/: bot.js  game-client.js  game-server.js  heading.rs  lib.rs  paper-io-bot.js  player.rs  user-mode.js
src/bot/: bot-mode.js  paper-io-bot-mode.js
src/core/: color.js  consts.js  core.js  game-consts.js  grid.js  index.js  player.js  stack.js
src/mode/: god.js  mode-god.js  mode-user.js  player.js
tests/: test.rs
