[package]
name = "p2pio"
version = "0.1.0"
authors = ["Stuart Hunt <me@stuarhunt.dev>", "Johnny Rockett <me@johnnyrockett.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.59"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
log = "0.4"

[dependencies.rustdag-wasm]
path = "p2pio-contract/rustdag/bindings/wasm/"

# [dependencies.p2pio-contract]
# path = "p2pio-contract/contract/"
