[package]
name = "p2pio"
version = "0.1.0"
authors = ["Stuart Hunt <me@stuarhunt.dev>", "Johnny Rockett <me@johnnyrockett.dev>", "Colin Moore <colin@moore.one>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.59"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
log = "0.4"
js-sys = "0.3.37"
wasm-bindgen-futures = "0.4.9"
futures = "0.3.4"

[dependencies.rustdag-wasm]
path = "rustdag/bindings/wasm/"

[dependencies.rustdag-lib]
path = "rustdag/lib/"
default-features = false
features = ["wasm-bind"]

# [dependencies.p2pio-contract]
# path = "contract/"
